# rust

./: .gitignore  .gitmodules  .markdownlint-cli2.yaml  .markdownlint.yaml  .mise.toml  .vale.ini  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  MIGRATION.md  Makefile  README.md  SDK Development.md  SECURITY.md  build.rs  codecov.yml  deny.toml  rust-toolchain.toml
.config/: nextest.toml
.githooks/: post-checkout  post-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  labeler.yml  release.yaml  release.yml  security.yml  stale.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
.vale/styles/Vocab/InferaDB/: accept.txt
.vale/styles/config/vocabularies/InferaDB/: accept.txt  reject.txt
docs/: README.md  troubleshooting.md
docs/guides/: advanced.md  authentication.md  authorization-api.md  authorization-scenarios.md  caching.md  consistency.md  control-api.md  debugging.md  errors.md  installation.md  integration-patterns.md  management-api.md  migration.md  multi-tenant.md  observability.md  performance-tuning.md  production-checklist.md  schema-design.md  schema-versioning.md  temporal-permissions.md  testing.md
docs/internal/: competitive-analysis.md
examples/: Cargo.toml
inferadb-derive/: Cargo.toml
inferadb-derive/src/: lib.rs
proto/: inferadb.proto
src/: lib.rs  prelude.rs  tracing_support.rs  user_agent.rs  wasm.rs
src/auth/: credentials.rs  ed25519.rs  mod.rs  provider.rs
src/client/: builder.rs  health.rs  inner.rs  mod.rs
src/config/: cache.rs  circuit_breaker.rs  degradation.rs  mod.rs  retry.rs  tls.rs
src/control/: account.rs  audit.rs  clients.rs  jwks.rs  members.rs  mod.rs  organizations.rs  schemas.rs  teams.rs  types.rs  vaults.rs
src/error/: access_denied.rs  core.rs  error.rs  kind.rs  mod.rs
src/middleware/: mod.rs
src/testing/: authorization_client.rs  in_memory.rs  mock_client.rs  mod.rs  test_vault.rs
src/tracing_support/: context.rs  metrics.rs  mod.rs  propagator.rs  span.rs
src/transport/: grpc.rs  mock.rs  mod.rs  rest.rs  traits.rs
src/transport/proto/: inferadb.authorization.v1.rs  inferadb.v1.rs  mod.rs
src/types/: consistency.rs  context.rs  decision.rs  entity.rs  mod.rs  relationship.rs
src/vault/: client.rs  explain.rs  mod.rs  simulate.rs  watch.rs
tests/integration/: client_tests.rs  common.rs  control_tests.rs  main.rs  transport_tests.rs  vault_advanced_tests.rs  vault_tests.rs
